--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -34,6 +34,13 @@ spec:
       containers:
       - name: backend
         image: saikumar718/backend:v1.0
+        resources:
+           requests:
+              cpu: "100m"
+              memory: "125mi"
+           limits:
+              cpu: "150mi"
+              memory: "250mi"
         envFrom:
         - configMapRef:
            name: backend
