--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -37,10 +37,10 @@ spec:
         resources:
            requests:
               cpu: "100m"
-              memory: "125mi"
+              memory: "125Mi"
            limits:
               cpu: "150mi"
-              memory: "250mi"
+              memory: "250Mi"
         envFrom:
         - configMapRef:
            name: backend
