--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -39,7 +39,7 @@ spec:
               cpu: "100m"
               memory: "125Mi"
            limits:
-              cpu: "150mi"
+              cpu: "150m"
               memory: "250Mi"
         envFrom:
         - configMapRef:
