--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -124,7 +124,7 @@ spec:
               cpu: "100m"
               memory: "125Mi"
            limits:
-              cpu: "150mi"
+              cpu: "150m"
               memory: "250Mi"
         volumeMounts:
             - name: nginx-conf
