--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -45,6 +45,13 @@ spec:
            limits:
               cpu: "150m"
               memory: "250Mi"
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          failureThreshold: 2
+          initialDelaySeconds: 30
+          periodSeconds: 5
         envFrom:
         - configMapRef:
            name: backend
