--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -4,7 +4,8 @@ metadata:
   name: backend
   namespace: expense
 data:
-  DB_HOST: mysql
+  # DB_HOST: mysql
+    DB_HOST: db-dev.devopswithaws.store
 ---
 kind: Deployment
 apiVersion: apps/v1
