--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -167,4 +167,4 @@ spec:
   serviceRef:
     name: frontend # route traffic to the awesome-service
     port: 80
-  targetGroupARN: <arn-to-targetGroup>
+  targetGroupARN: arn:aws:elasticloadbalancing:us-east-1:192990275288:targetgroup/expense-dev-frontend/32b1b314300c48ac
